syntax = "proto3";

option csharp_namespace = "MicroOrders.Protos";
option java_multiple_files = true;
package orders;

import "Protos/Orders/products.proto";
import "google/protobuf/wrappers.proto";

service Orders {
  rpc List(OrderListRequest) returns (OrderListReply);

  rpc Get (OrderRequest.Id) returns (OrderReply);

  rpc Create (OrderRequest) returns (OrderReply);

  rpc Update (OrderRequest) returns (OrderReply);

  rpc Delete (OrderRequest.Id) returns (OrderReply);
}

message AddressReply {
  int64 id = 1;
  string street = 2;
  string zipCode = 3;
  string countryCode = 4;
}

message OrderRequest {
  message Id {
    int64 id = 1;
  }
  int64 id = 1;
  google.protobuf.Int32Value user = 2;
  string customer = 3;
  google.protobuf.StringValue comment = 4;
  AddressReply address = 5;
  repeated ProductReply orderProductList = 6;
}

message OrderReply {
  OrderRequest data = 1;
  string createdAt = 3;
  int32 createdBy = 4;
  google.protobuf.StringValue updatedAt = 5;
  google.protobuf.Int32Value updatedBy = 6;
  google.protobuf.StringValue deletedAt = 7;
  google.protobuf.Int32Value deletedBy = 8;
}

message OrderListRequest {
  int32 offset = 1;
  int32 count = 2;
}

message OrderListReply {
  int32 offset = 1;
  int32 count = 2;
  int32 total = 3;
  repeated OrderReply ordersList = 4;
}